Spring/Error/TestJWT/src/main/java/com/example/demo/jwtauth/MyUserRepository.java
package com.example.demo.jwtauth;

import org.springframework.data.jpa.repository.JpaRepository;

public interface MyUserRepository extends JpaRepository<MyUser, Long> {
    MyUser findByUsername(String username);
}